--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -10,7 +10,7 @@ pool:
 
 steps:
 - script: |
-   az login --service-principal -u 4de44e41-0451-470a-9643-c04a3978db13 -p _yN8Q~foCfmhjjwOVWOiDEkRyuLAWvoGQT1JDbgJ --tenant aad3cd3b-f269-4d1d-abea-18ea92f2ce38
+   az login --service-principal -u 457a2087-c8e9-4998-9ab6-fcecddada55d -p aKF8Q~h1eSmRhuOpdubRaOzaQk5J4TX2XEIaDcvf --tenant 1f4beacd-b7aa-49b2-aaa1-b8525cb257e0
    az group create --name myResourceGroup2 --location eastus
    az acr create --resource-group myResourceGroup1 --name acrwhenin23 --sku Basic
   displayName: 'Build and Push Docker Image'
