--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -11,12 +11,10 @@ pool:
 steps:
 - script: |
    az login --service-principal -u 457a2087-c8e9-4998-9ab6-fcecddada55d -p aKF8Q~h1eSmRhuOpdubRaOzaQk5J4TX2XEIaDcvf --tenant 1f4beacd-b7aa-49b2-aaa1-b8525cb257e0
-   az group create --name myResourceGroup1 --location eastus
-   az acr create --resource-group myResourceGroup1 --name acrwhenin22 --sku Basic
   displayName: 'Build and Push Docker Image'
 
 - script: |
    cd FDB-storage-app
    ls
-   az acr build --image sonein:v1 --registry acrwhenin22 --file dockerfile .
+   az acr build --image sonein:v1 --registry crscnonprod --file dockerfile .
   displayName: 'push to registry'
