Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -11,10 +11,10 @@ pool:
 steps:
 - script: |
    az login --service-principal -u 457a2087-c8e9-4998-9ab6-fcecddada55d -p aKF8Q~h1eSmRhuOpdubRaOzaQk5J4TX2XEIaDcvf --tenant 1f4beacd-b7aa-49b2-aaa1-b8525cb257e0
-  displayName: 'Build and Push Docker Image'
+  displayName: 'Login azure'
 
 - script: |
    cd FDB-storage-app
    ls
-   az acr build --image sonein:v1 --registry crscnonprod --file dockerfile .
-  displayName: 'push to registry'
+   az acr build --image sonein:v$(Build.BuildId) --registry crscnonprod --file dockerfile .
+  displayName: 'Build and push to registry'
