--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,5 +20,5 @@ steps:
   displayName: 'Build and push to registry'
 
 - script: |
-   az container update --resource-group myResourceGroup --name containersc --image demoacrsc.azurecr.io/sonein:v$(Build.BuildId) --registry-username prajwal11 --registry-password 7jYIp0ugnt4j0m+UEIcRq0KGW/goA9oKNPAWKCQWf/+ACRBT4bZE
+   az container create --resource-group myResourceGroup --name containersc --image demoacrsc.azurecr.io/sonein:v$(Build.BuildId) --registry-username prajwal11 --registry-password 7jYIp0ugnt4j0m+UEIcRq0KGW/goA9oKNPAWKCQWf/+ACRBT4bZE
    displayName: 'Update Container Instance'
