--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -15,10 +15,9 @@ steps:
 
 - script: |
    cd FDB-storage-app
-   ls
    az acr build --image sonein:v$(Build.BuildId) --registry demoacrsc --file dockerfile .
   displayName: 'Build and push to registry'
 
 - script: |
-   az container create --resource-group myResourceGroup --name containersc --image demoacrsc.azurecr.io/sonein:v$(Build.BuildId) --registry-username prajwal11 --registry-password 7jYIp0ugnt4j0m+UEIcRq0KGW/goA9oKNPAWKCQWf/+ACRBT4bZE
+   az container create --resource-group myResourceGroup --name containersc --image demoacrsc.azurecr.io/sonein:v$(Build.BuildId) --registry-username demoacrsc --registry-password HECWqNu/InD1gp+ImGpfBOTBEODlP7eWwvFEAvXU5E+ACRB098tC
    displayName: 'Update Container Instance'
