Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - main
 
@@ -11,11 +6,7 @@ pool:
 
 steps:
 - script: |
-   docker build -t $(Build.Repository.Name):$(Build.BuildId) .
-   docker login -u prajwal11 -p CVM6nsLsyiZehaEMB8d4uFg9TiogSRApTpidjTu8Az+ACRCqs9fE prajwal11.azurecr.io
-   docker tag $(Build.Repository.Name):$(Build.BuildId) prajwal11.azurecr.io/sample/hello-norld:$(Build.BuildId)
-   docker push prajwal11.azurecr.io/sample/hello-norld:$(Build.BuildId)
-  displayName: 'Build and Push Docker Image'
-
-- script: docker images
-  displayName: 'List Docker Images'
+   az login --service-principal -u 457a2087-c8e9-4998-9ab6-fcecddada55d -p aKF8Q~h1eSmRhuOpdubRaOzaQk5J4TX2XEIaDcvf --tenant 1f4beacd-b7aa-49b2-aaa1-b8525cb257e0
+   cd FDB-storage-app
+   az acr build --image sonein:v$(Build.BuildId) --registry demoacrsc --file dockerfile .
+   displayName: 'Build and Deploy'
