--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,5 +9,5 @@ steps:
    az login --service-principal -u 457a2087-c8e9-4998-9ab6-fcecddada55d -p aKF8Q~h1eSmRhuOpdubRaOzaQk5J4TX2XEIaDcvf --tenant 1f4beacd-b7aa-49b2-aaa1-b8525cb257e0
    cd FDB-storage-app
    az acr build --image scimg:v$(Build.BuildId) --registry demoin --file dockerfile .
-   az containerapp update --name prajwalapp --resource-group myResourceGroup --image scimg:v$(Build.BuildId)
+   az containerapp update --name prajwalapp --resource-group myResourceGroup --image scimg:v$(Build.BuildId) --registry-login-server demoin.azurecr.io --registry-username demoin --registry-password H65GteTrJi5IHEMLtqsg8o7uSiF5EOGqtlK+L2tnUT+ACRBDVOXI --target-port 8000
    displayName: 'Build and Deploy'
